tests/outref/TERR028.ref

-- TERR028 : OCTO345 : Issue error when inline M function use is attempted

-- Attempt to use an extrinsic function. Use a known existing function to test the case
-- where it is possible to call, but disallowed.
SELECT * FROM names WHERE id = $$ABS^%ydboctosqlfunctions(-2);

-- Attempt to use intrinsic function
SELECT $ZWRITE(firstname) FROM names;

-- Attempt to use inline extrinsic functions with leading % in M label or routine
SELECT * FROM names WHERE id = $$^%("some value");
SELECT * FROM names WHERE id = $$%^%("some value");
SELECT * FROM names WHERE id = $$%ABS^someroutine(-2);
SELECT * FROM names WHERE id = $$ABS^%someroutine(-2);

-- Attempt to use inline extrinsic function in SELECT list
SELECT $$a('b');

-- Attempt to use inline extrinsic function in FROM clause
SELECT * FROM names WHERE $$a('b');

-- Attempt to use inline extrinsic function in HAVING clause
SELECT id FROM names GROUP BY id HAVING $$a(id);

-- Attempt to use inline extrinsic function in alias name
select id as $$dummyextrinsicfunction^something from names;
LINE 3:1: SELECT * FROM names WHERE id = $$ABS^%ydboctosqlfunctions(-2);
                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT * FROM names WHERE id = $$ABS^%ydboctosqlfunctions(-2);
LINE 5:1: SELECT $ZWRITE(firstname) FROM names;
                 ^^^^^^^
syntax error, unexpected INTRINSIC_FUNCTION
OCTO> SELECT $ZWRITE(firstname) FROM names;
LINE 7:1: SELECT * FROM names WHERE id = $$^%("some value");
                                         ^^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT * FROM names WHERE id = $$^%("some value");
LINE 8:1: SELECT * FROM names WHERE id = $$%^%("some value");
                                         ^^^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT * FROM names WHERE id = $$%^%("some value");
LINE 9:1: SELECT * FROM names WHERE id = $$%ABS^someroutine(-2);
                                         ^^^^^^^^^^^^^^^^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT * FROM names WHERE id = $$%ABS^someroutine(-2);
LINE 10:1: SELECT * FROM names WHERE id = $$ABS^%someroutine(-2);
                                          ^^^^^^^^^^^^^^^^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT * FROM names WHERE id = $$ABS^%someroutine(-2);
LINE 12:1: SELECT $$a('b');
                  ^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT $$a('b');
LINE 14:1: SELECT * FROM names WHERE $$a('b');
                                     ^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT * FROM names WHERE $$a('b');
LINE 16:1: SELECT id FROM names GROUP BY id HAVING $$a(id);
                                                   ^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> SELECT id FROM names GROUP BY id HAVING $$a(id);
LINE 18:1: select id as $$dummyextrinsicfunction^something from names;
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
syntax error, unexpected EXTRINSIC_FUNCTION
OCTO> select id as $$dummyextrinsicfunction^something from names;
OCTO> 
